tests/programs/valid/import_local_module/main.py
import messages

print(messages.message)
