tests/programs/invalid/bad_import/main.py
from . import message

print(message)
